# taskmaster

./: .clang-format  .gitignore  .rustfmt.toml  Cargo.toml  README.md  activate_raw_mode.c  activate_raw_mode.h  build.rs  out  rust-toolchain.toml  rustfmt.toml  test.c
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: spellcheck.yml
.github/workflows/: cargo-test.yml  clippy.yml  rustfmt.yml  spellcheck.yml  test.yml
config/: attach.toml  autorestart.toml  autostart.toml  command.toml  duplicatestdout.toml  env.toml  example.toml  exitcode.toml  felix.toml  healthcheck.toml  privilege_deescalation.toml  processes.toml  redirect.toml  retries.toml  signal.toml  stoptime.toml  umask.toml  unexisting_group.toml  uptime.toml  workingdir.toml
executables/: env.sh  signals.py  sleepwrite.py
src/: conf.rs  jsonrpc.rs  lib.rs  log.rs  main.rs  run.rs  shell.rs  termios.rs
src/conf/: defaults.rs  help.rs  mod.rs  proc.rs  tests.rs
src/conf/proc/: defaults.rs  mod.rs  types.rs
src/config/: mod.rs
src/jsonrpc/: handlers.rs  jsonrpc.rs  mod.rs  request.rs  response.rs  short_process.rs
src/log/: mod.rs
src/run/: daemon.rs  mod.rs  proc.rs  statemachine.rs
src/run/daemon/: command.rs  commands.rs  error.rs  mod.rs  monitor.rs  socket.rs  statemachine.rs
src/run/proc/: error.rs  mod.rs  state.rs  tests.rs
src/run/statemachine/: desired.rs  healthcheck.rs  log.rs  mod.rs  monitor.rs  state.rs  (+2 more)
src/shell/: args.rs
tests/configs/: example.toml  sleep.toml  unexpected_field_global_scope.toml  unexpected_field_process_scope.toml
(+9 files in other folders)
