[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"

[lib]
name = "tasklib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libc = "0.2.169"
toml = "0.8.20"
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.9.1"
clap = "4.5.37"

[[bin]]
name = "taskmaster"
path = "src/bin/taskmaster.rs"

[[bin]]
name = "taskshell"

[build-dependencies]
cc = "1.0"
