[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"

[lib]
name = "tasklib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
libc = "0.2.169"
toml = "0.8.20"
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.9.1"
term_size = "0.3.2"

[[bin]]
name = "taskmaster"

[[bin]]
name = "taskshell"

[[bin]]
name = "taskboard"

[build-dependencies]
cc = "1.0"
